# MCU_Learn

./: README.md
.obsidian/: app.json  community-plugins.json  workspace.json
bootloader/: bootloader.md  my_bootloader.c
bootloader/.obsidian/: workspace.json
bootloader/tutor/: keilkill.bat
bootloader/tutor/OTA_aliyun.com/: 阿里云OTA说明书.docx
bootloader/tutor/OTA_aliyun.com/BootLoader/: Project.uvoptx  Project.uvprojx
bootloader/tutor/OTA_aliyun.com/BootLoader/Hardware/: OTA.c  OTA.h
bootloader/tutor/OTA_aliyun.com/BootLoader/Objects/: Project.hex
bootloader/tutor/OTA_aliyun.com/BootLoader/System/: Tim3.c
bootloader/tutor/OTA_aliyun.com/BootLoader/User/: main.c
bootloader/tutor/OTA_aliyun.com/UserApplication_v1/: Project.uvprojx
bootloader/tutor/OTA_aliyun.com/UserApplication_v1/Hardware/: MySPI.c  OTA.c  OTA.h  UART2.c  W25Q64.c
bootloader/tutor/OTA_aliyun.com/UserApplication_v1/Objects/: Project.hex
bootloader/tutor/OTA_aliyun.com/UserApplication_v1/System/: Tim2.c  Tim2.h  Tim3.c
bootloader/tutor/OTA_aliyun.com/UserApplication_v1/User/: main.c
bootloader/tutor/OTA_bemfa.com/: UserApplication_v1_HTTP.txt  巴法云OTA说明书.docx
bootloader/tutor/OTA_bemfa.com/BootLoader/: Project.uvoptx  Project.uvprojx
bootloader/tutor/OTA_bemfa.com/BootLoader/Hardware/: Address.h  Key.c  OTA.c  OTA.h  UART1.c  UART1.h  UART2.c  UART2.h  W25Q64.c
bootloader/tutor/OTA_bemfa.com/BootLoader/Objects/: Project.hex
bootloader/tutor/OTA_bemfa.com/BootLoader/System/: MyFLASH.c  Tim3.c  Tim3.h
bootloader/tutor/OTA_bemfa.com/BootLoader/User/: main.c
bootloader/tutor/OTA_bemfa.com/UserApplication_v1/: Project.uvguix.12409  Project.uvoptx  Project.uvprojx
bootloader/tutor/OTA_bemfa.com/UserApplication_v1/Objects/: Project.hex
bootloader/tutor/OTA_bemfa.com/UserApplication_v1/System/: Tim3.c  Tim3.h
bootloader/tutor/OTA_bemfa.com/UserApplication_v1/User/: main.c
elab/ELAB_Lesson/0.ELAB_NANO_Template/project/stm32f103zet6/usr/core/: stm32f1xx_hal_msp.c  stm32f1xx_it.c
elab/ELAB_Lesson/1.ELAB_NANO_Log/project/stm32f103zet6/ide/keil/: Template.uvprojx
elab/ELAB_Lesson/4.ELAB_NANO_Export/elab/: CMakeLists.txt
elab/ELAB_Lesson/4.ELAB_NANO_Export/elab/common/: elab_export.c  elab_export.h
elab/ELAB_Lesson/4.ELAB_NANO_Export/project/stm32f103zet6/ide/eide/.eide/: eide.json
elab/ELAB_Lesson/4.ELAB_NANO_Export/project/stm32f103zet6/ide/keil/: Template.sct  Template.uvprojx
elab/ELAB_Lesson/4.ELAB_NANO_Export/project/stm32f103zet6/usr/: main.c
elab/ELAB_Lesson/4.ELAB_NANO_Export/project/stm32f103zet6/usr/bsp/: bsp.c
elab/ELAB_Lesson/5.ELAB_NANO_Shell/elab/: CMakeLists.txt
elab/ELAB_Lesson/5.ELAB_NANO_Shell/elab/common/: elab_export.c
elab/ELAB_Lesson/5.ELAB_NANO_Shell/mcu/stm32f103zet6/: CMakeLists.txt
elab/ELAB_Lesson/5.ELAB_NANO_Shell/project/stm32f103zet6/ide/eide/.eide/: eide.json
elab/ELAB_Lesson/5.ELAB_NANO_Shell/project/stm32f103zet6/ide/gcc/scripts/cmake/internal/: armgcc.cmake
elab/ELAB_Lesson/5.ELAB_NANO_Shell/project/stm32f103zet6/ide/keil/: Template.uvprojx
elab/ELAB_Lesson/5.ELAB_NANO_Shell/project/stm32f103zet6/usr/: CMakeLists.txt  main.c
elab/ELAB_Lesson/5.ELAB_NANO_Shell/project/stm32f103zet6/usr/bsp/: bsp.c  debug_uart.h  syscalls.c
elab/ELAB_Lesson/5.ELAB_NANO_Shell/project/stm32f103zet6/usr/core/: stm32f1xx_hal_msp.c
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/elab/: CMakeLists.txt
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/elab/3rd/Shell/: shell.c  shell.h
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/elab/common/: elab_assert.c  elab_common.c  elab_common.h  elab_def.h  elab_export.c
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/elab/os/mcu_noos/: cmsis_os2.c
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/elab/os/mcu_os/: cmsis_os2.c
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/example/linux_example/: CMakeLists.txt  linux_example.c
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/example/win32_example/: CMakeLists.txt  elab_config.h  win_example.c
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/project/stm32f103zet6/ide/eide/.eide/: eide.json
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/project/stm32f103zet6/ide/gcc/scripts/cmake/internal/: STM32F103XE_FLASH.ld
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/project/stm32f103zet6/ide/keil/: Template.uvprojx
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/project/stm32f103zet6/usr/: CMakeLists.txt  FreeRTOSConfig.h  elab_config.h  main.c
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/project/stm32f103zet6/usr/bsp/: bsp.c  debug_uart.c  sysmem.c
elab/ELAB_Lesson/6.ELAB_NANO_CMSISOS/project/stm32f103zet6/usr/core/: stm32f1xx_it.c
(+2 files in other folders)
